<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="themes_category"
        android:title="Theme">

        <ColorPickerPreference
            android:defaultValue="@color/colorPrimary"
            android:dialogTitle="Select a Theme"
            android:key="color_picker"
            android:persistent="true"
            android:title="Color Picker"
            app:pref_size="small" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="color_candy_category"
        android:title="Color Candy">

        <Preference android:title="Github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_url" />
        </Preference>

        <Preference android:title="Play Store">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/play_store_url" />
        </Preference>

        <Preference
            android:summary="@string/version_number"
            android:title="Version" />

    </PreferenceCategory>

    <PreferenceCategory android:key="tech_aura_category">

        <Preference android:title="Privacy Policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/privacy_url" />
        </Preference>

        <Preference
            android:summary="@string/feedback_summary"
            android:title="Send Feedback" />

    </PreferenceCategory>

</PreferenceScreen>